# Course-Project-C-

./: README.md
Quiz/: BasicFuncs.cpp  BasicFuncs.h  CMakeLists.txt  ContentEditors.cpp  ContentEditors.h  Structs_Constants.h  TakeQuestionFunc.cpp  TakeQuestionFunc.h  basicFuncs.cpp  basicFuncs.h  contentEditors.cpp  contentEditors.h  gameTools1.cpp  gameTools1.h  gameTools2.cpp  gameTools2.h  gameUtilities1.cpp  gameUtilities1.h  gameUtilities2.cpp  gameUtilities2.h  lifelinesFuncs.cpp  lifelinesFuncs.h  myBasicFuncs.cpp  myBasicFuncs.h  myConstants.cpp  myConstants.h  myContentEditors.cpp  myContentEditors.h  myTakeQuestionFunc.cpp  myTakeQuestionFunc.h  printMenus.cpp  printMenus.h  questionProcessing.cpp  questionProcessing.h  quizApp.cpp  quizFunc.cpp  quizFunc.h  structsNconstants.h  takeQuestionFuncs.cpp  takeQuestionFuncs.h
Quiz/Resources/: geography.txt  history.txt  literature.txt  physics.txt  politics.txt
